spelling correction and add font-awesome and style guide

--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.0-rc.7/js/calcite-web.min.js"></script>
+    <script src="https://use.fontawesome.com/145c7ba572.js"></script>
   </body>
 </html>
