--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BLAMM!</title>
-    <link href="https://fonts.googleapis.com/css?family=Bangers,Oswald:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Roboto:300,400,700" rel="stylesheet">
   </head>
   <body>
     <noscript>
